tests/ui/span/E0536.stderr
error[E0536]: expected 1 cfg-pattern
  --> $DIR/E0536.rs:2:13
   |
LL |     if cfg!(not()) { }
   |             ^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0536`.
