tests/ui/span/E0536.rs
pub fn main() {
    if cfg!(not()) { } //~ ERROR E0536
}
